# server

./: .env  .gitignore  Cargo.toml  LICENSE  diesel.toml
docs/: README.md  diesel.md
src/: auth.rs  errors.rs  lib.rs  load_env.rs  main.rs
src/database/: errors.rs  functions.rs  main.rs  mod.rs  models.rs  schema.rs
src/diesel/: main.rs  models.rs  schema.rs
