[package]
name = "raspi-server"
version = "0.1.0"
edition = "2021"
default-run = "raspi-server"

[[bin]]
name = "database"
path = "src/database/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
dotenvy = "0.15.7"
